--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -21,18 +21,18 @@ textarea {
   border-bottom: 10px solid black;
 }
 
-.description {
+/* .description {
   white-space: pre-wrap;
-}
+} */
 
 .time-block {
   text-align: center;
-  border-radius: 15px;
+  border-radius: 15px 0 0 15px;
 }
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  /* height: 80px; */
   border-top: 1px solid white;
 }
 
