--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,9 @@ textarea {
   border-bottom: 10px solid black;
 }
 
-/* .description {
+.description {
   white-space: pre-wrap;
-} */
+}
 
 .time-block {
   text-align: center;
@@ -32,7 +32,7 @@ textarea {
 
 .row {
   white-space: pre-wrap;
-  /* height: 80px; */
+  height: 80px;
   border-top: 1px solid white;
 }
 
